@@ -27,6 +27,7 @@ setup(name='plone.formwidget.namedfile',
           'setuptools',
           'plone.namedfile',
           'z3c.form',
+          'plone.z3cform >= 0.7.4',
       ],
       entry_points="""
       [z3c.autoinclude.plugin]
