@@ -4,6 +4,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+* Don't need to ask parent for widget name anymore, since ++widget++ traverser
+  will understand full widget names.
+  [lentinj]
 
 1.0 (2011-04-30)
 ----------------
